Bugfix: Correctly resize schema container to prevent invisible boundaries

--- a/structr-base/src/main/resources/structr/css/schema.css
+++ b/structr-base/src/main/resources/structr/css/schema.css
@@ -16,11 +16,14 @@
  * You should have received a copy of the GNU General Public License
  * along with Structr.  If not, see <http://www.gnu.org/licenses/>.
  */
+#schema-container {
+	height: calc(100vh - 8rem);
+}
+
 #schema-graph {
 	background-color: var(--main-background);
 	position: relative;
 	top: 2rem;
-	height: calc(100vh - 8rem);
 }
 
 #schema-graph.hide-inheritance-arrows .dashed-inheritance-relationship {
@@ -30,10 +33,6 @@
 #schema-graph.hide-relationship-labels .rel-type,
 #schema-graph.hide-relationship-labels .multiplicity {
 	display: none;
-}
-
-#schema-graph .light {
-	/*opacity: .7;*/
 }
 
 #schema-graph.noselect, .graphNoSelect {
@@ -47,12 +46,9 @@
 #schema-graph .node {
 	position: absolute;
 	background-color: var(--solid-white);
-	/*border: 1px solid var(--input-field-border);*/
 	box-shadow: 0 0 .625rem 0 rgba(0, 0, 0, 0.1);
 	padding: .5rem;
 	margin: 0 ! important;
-	/*opacity: .9;*/
-	/*border-radius: 16px;*/
 }
 
 #schema-graph .node.selected {
@@ -79,24 +75,6 @@
 
 .schema h3 {
 	margin: 6px 0 2px 0;
-}
-
-#connector-style, #node-type-selector, #rel-type-selector, #saved-layout-selector, #layout-style {
-	/*color: var(--gray-222);*/
-	/*padding: 1px 2px 3px 4px;*/
-	/*vertical-align: middle;*/
-	/*line-height: 1.3em;*/
-	/*border: 1px solid transparent;*/
-	/*background-color: var(--gray-bg);*/
-	/*height: 24px;*/
-}
-
-#connector-style {
-	/*margin: 0 8px 4px 12px;*/
-}
-
-#layout-style {
-	/*margin: 0 0 4px 48px;*/
 }
 
 #zoom-slider {
